# asco

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: core-change.yml
.github/skills/asco-build/: SKILL.md
.github/skills/asco-includes/: SKILL.md
.github/skills/asco-review/: SKILL.md
.github/skills/asco-test-doc/: SKILL.md
.github/skills/module-test-and-doc/: SKILL.md
.github/workflows/: ci.yml  mdbook.yaml  mdbook.zh.yaml
asco/: CMakeLists.txt  asco_main.cpp  assert.cpp  assert.h  cancellation.h  channel.h  context.cpp  context.h  coro_local.h  coroutine_allocator.cpp  coroutine_allocator.h  exception.h  future.cpp  future.h  future_nocoro.h  futures.cpp  futures.h  generator.h  invoke.h  join.h  join_handle.h  join_set.h  lazy_delete.h  panic.h  perf.h  print.h  rterror.h  runtime.cpp  runtime.h  sched.cpp  sched.h  select.h  suspend.h  sync_awaiter.h  this_task.cpp  this_task.h  yield.cpp  yield.h
asco/compile_time/: platform.h  string.h
asco/concurrency/: concurrency.h  continuous_queue.h  hash_map.h  queue.h  ring_queue.h
asco/core/: cancellation.cpp  cancellation.h  daemon.cpp  daemon.h  io_thread.cpp  io_thread.h  object_pool.h  pool_allocator.h  runtime.cpp  runtime.h  sched.cpp  sched.h  slub.h  task.h  taskgroup.h  timer.cpp  timer.h  wait_for_valid.cpp  wait_for_valid.h  wait_queue.cpp  wait_queue.h  worker.cpp  worker.h
asco/core/linux/: io_thread.cpp  io_uring.cpp  io_uring.h  io_uring_helper.cpp  io_uring_helper.h
asco/core/mm/: coroutine_pool.cpp  coroutine_pool.h  cstring.cpp  cstring.h  pool.cpp  pool.h
asco/core/os/: io.h  process.cpp  process.h  terminal.h
asco/core/os/linux/: io_uring.cpp  process.cpp  terminal.cpp
asco/core/os/windows/: iocp.cpp  process.cpp  terminal.cpp
asco/core/task/: cycle_scheduler.h  dynprio_scheduler.cpp  dynprio_scheduler.h  execution_domain.cpp  execution_domain.h  execution_domain_proxy.h  executor.cpp  executor.h  scheduler.h
asco/core/time/: high_resolution_timer.cpp  high_resolution_timer.h  timer.cpp  timer.h  timer_concept.h
asco/io/: buffer.h  bufio.cpp  bufio.h  file.cpp  file.h  linux_file.cpp  standard.cpp  standard.h  stream.h  uring_file.cpp
asco/nolock/: continuous_queue.h
asco/panic/: color.h  panic.cpp  panic.h  unwind.cpp  unwind.h
asco/sync/: barrier.h  channel.h  condition_variable.cpp  condition_variable.h  mutex.h  notify.cpp  notify.h  rwlock.h  rwspin.h  semaphore.h  spin.h  spinlock.h  spinrwlock.h
asco/task/: fetch_result.h  join_all.h  join_set.h  select.h
asco/test/: bench.h  test.h  test_main.cpp
asco/time/: interval.cpp  interval.h  sleep.cpp  sleep.h  timeout.h
asco/unwind/: coro_unwind.h  linux_unwind.cpp  unwind.cpp  unwind.h
asco/util/: compile_config.h  consts.h  erased.h  flags.h  murmur.h  raw_storage.h  safe_erased.h  tsc.h  type_id.h  types.h
asco/utils/: channel.h  concepts.h  concurrency.h  cv.h  defines.h  dynvar.h  erased.h  flags.h  lazy_delete.h  math.h  memory_slot.h  mutex.h  page_map.h  placement_list.h  pubusing.h  templates.h  type_hash.h  types.h  utils.h  while_decl.h
benchmarks/: CMakeLists.txt  channel.cpp
cmake/: ascoConfig.cmake.in
docs/en-us/: book.toml
docs/en-us/src/: SUMMARY.md  asco_async_runtime.md  fast_getstart.md  future.md  future<T>.md  print.md  quick_start.md  task_composition.md
docs/en-us/src/IO/: README.md  block_read_writer.md  buffer.md  file.md  stream_read_writer.md  stream_reader.md  stream_writer.md
docs/en-us/src/advanced/: README.md  perf_metrics.md  runtime.md
docs/en-us/src/async_basics/: README.md  generator.md  interval.md  timeout.md
docs/en-us/src/lockfree/: README.md  continuous_queue.md
docs/en-us/src/sync_primitives/: README.md  barrier.md  condition_variable.md  mutex.md  rwlock.md  semaphore.md  spin_lock.md
docs/zh-cn/: book.toml  快速入门.md
docs/zh-cn/src/:  快速入门.md  SUMMARY.md  asco异步运行时.md  future.md  future<T>.md  generator.md  join_set.md  print.md  任务组合.md  快速入门.md
docs/zh-cn/src/IO/: README.md  原始文件.md  块式读写器.md  文件.md  流式写入器.md  流式读写器.md  流式读取器.md  零拷贝缓冲区.md
docs/zh-cn/src/advance/: advance.md  assert.md  context.md  daemon.md  join_set.md  panic.md  select.md
docs/zh-cn/src/advanced/: README.md  cancellation.md  daemon.md  task_local_storage.md  testing.md
docs/zh-cn/src/concurrency/: README.md  hash_map.md
docs/zh-cn/src/io/: README.md  buffer.md  file.md
docs/zh-cn/src/sync/: README.md  channel.md  condition_variable.md  mutex.md  notify.md  rwlock.md  semaphore.md  spinlock.md  同步原语.md
docs/zh-cn/src/task/: README.md  join_all.md  join_set.md  select.md
docs/zh-cn/src/time/: README.md  interval.md  sleep.md
docs/zh-cn/src/异步同步原语/: README.md  互斥锁.md  信号量.md  屏障.md  条件变量.md  自旋锁.md  读写锁.md
docs/zh-cn/src/异步编程基本工具/: README.md  channel.md  generator.md  interval.md  timeout.md
docs/zh-cn/src/无锁数据结构与并行算法/: README.md  无锁连续队列.md
docs/zh-cn/src/进阶/: README.md  asco异步运行时.md  性能统计.md
examples/: CMakeLists.txt  common.cpp
scripts/: flamegraph.py
tests/: CMakeLists.txt  async_test_utils.h  barrier.cpp  cancellation.cpp  channel.cpp  clf_lazyde.cpp  combination.cpp  condvar.cpp  continuous_queue.cpp  corotest.cpp  future.cpp  future_base.cpp  futurets.cpp  generator.cpp  hash_map.cpp  inline.cpp  inner_channel_test.cpp  interval.cpp  placement_list.cpp  rwlock.cpp  select.cpp  sems.cpp  sleep.cpp  task_local.cpp  test_generator.cpp  test_join_set.cpp  test_select.cpp  time.cpp  timeout.cpp  unwi.cpp
tests/concurrency/: hash_map.cpp  ring_queue.cpp
tests/context/: test_context.cpp
tests/io/: blockrw.cpp  buffer.cpp  file.cpp  standard.cpp  streamrw.cpp  zcbuffer.cpp
tests/sync/: barrier.cpp  channel.cpp  condition_variable.cpp  condvar.cpp  mutex.cpp  rwlock.cpp  semaphore.cpp  sems.cpp  test_channel.cpp  test_mutex.cpp  test_notify.cpp  test_rwlock.cpp  test_semaphore.cpp
tests/task/: join_all.cpp  select.cpp
tests/time/: interval.cpp  sleep.cpp  test_interval.cpp  test_sleep.cpp  timeout.cpp
(+2 files in other folders)
